# yap-qgis

./: .gitignore  CMakeLists.txt  README.md  qgis.yap  qgis_yap.cpp
cmake/: FindQGIS.cmake
